--- a/js/app/i18n/locales/es.json
+++ b/js/app/i18n/locales/es.json
@@ -753,6 +753,8 @@
         "PRICING_RULE_PICKER_VEHICLE_BIKE": "Bicicleta",
         "PRICING_RULE_PICKER_VEHICLE_CARGO_BIKE": "Bicicleta de carga",
         "PRICING_RULE_PICKER_UNIT_KM": "km",
-        "PRICING_RULE_PICKER_UNIT_KG": "kg"
+        "PRICING_RULE_PICKER_UNIT_KG": "kg",
+        "DELIVERY_FORM_KEEP_ORIGINAL_PRICE": "Mantener precio original",
+        "DELIVERY_FORM_APPLY_NEW_PRICE": "Aplicar nuevo precio"
     }
 }
