--- a/js/app/i18n/locales/fr.json
+++ b/js/app/i18n/locales/fr.json
@@ -757,6 +757,8 @@
         "PRICING_RULE_PICKER_UNIT_KM": "km",
         "PRICING_RULE_PICKER_UNIT_KG": "kg",
         "DELIVERY_FORM_KEEP_ORIGINAL_PRICE": "Conserver le prix d'origine",
-        "DELIVERY_FORM_APPLY_NEW_PRICE": "Appliquer le nouveau prix"
+        "DELIVERY_FORM_APPLY_NEW_PRICE": "Appliquer le nouveau prix",
+        "PRICING_RULE_HUMANIZER_PRICE_RANGE": "{{unit_price}} par {{step}}",
+        "PRICING_RULE_HUMANIZER_PRICE_RANGE_WITH_THRESHOLD": "au-dessus de {{threshold}} - {{unit_price}} par {{step}}"
     }
 }
