--- a/translations/messages.en.yml
+++ b/translations/messages.en.yml
@@ -1697,8 +1697,12 @@ pricing.rule.humanizer.less_than: less than %value%
 pricing.rule.humanizer.more_than: more than %value%
 pricing.rule.humanizer.kg_unit: '%value% kg'
 pricing.rule.humanizer.km_unit: '%value% km'
-pricing.rule.humanizer.task_type_is: '%value% rate'
+pricing.rule.humanizer.volume_unit: '%value% vu'
+pricing.rule.humanizer.task_type_is: '%value% point'
 pricing.rule.humanizer.time_range_length: '%task_type% time window %operator% %value%'
 pricing.rule.humanizer.diff: '%task_type% prior notice %operator% %value%'
 pricing.rule.humanizer.order_items_total: cart total %operator% %value%
 pricing.rule.humanizer.packages_volume_units: package volume %operator% %value%
+pricing.rule.humanizer.price_range: '%unit_price% per %step%'
+pricing.rule.humanizer.price_range_with_threshold: 'above %threshold% - %unit_price% per %step%'
+pricing.rule.humanizer.price_per_package: '%unit_price% per %package_name%'
