--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -1641,6 +1641,7 @@ pricing.rule.humanizer.time_range_length: 'créneau horaire de %task_type% %oper
 pricing.rule.humanizer.diff: 'délai de préavis pour %task_type% %operator% %value%'
 pricing.rule.humanizer.order_items_total: 'total du panier %operator% %value%'
 pricing.rule.humanizer.packages_volume_units: 'volume du colis %operator% %value%'
+pricing.rule.humanizer.packages_contains_at_least_one: 'colis %package_name%'
 pricing.rule.humanizer.price_range: '%unit_price% par %step%'
 pricing.rule.humanizer.price_range_with_threshold: 'au-dessus de %threshold% - %unit_price% par %step%'
 pricing.rule.humanizer.price_per_package: '%unit_price% par %package_name%'
