feat(incident): add incident date in incident list table

--- a/js/app/i18n/locales/cs.json
+++ b/js/app/i18n/locales/cs.json
@@ -510,6 +510,7 @@
         "RESTAURANT": "Restaurace",
         "CUSTOMER": "Zákazník",
         "REPORTED_BY": "Nahlásil",
+        "REPORTED_AT": "Nahláseno",
         "ACTION": "Akce",
         "VIEW_INCIDENT": "Zobrazit incident",
         "REPORT": "Hlášení",
