--- a/js/app/i18n/locales/en.json
+++ b/js/app/i18n/locales/en.json
@@ -603,6 +603,7 @@
         "RESTAURANT": "Restaurant",
         "CUSTOMER": "Customer",
         "REPORTED_BY": "Reported by",
+        "REPORTED_AT": "Reported at",
         "ACTION": "Action",
         "VIEW_INCIDENT": "View incident",
         "NEW_INCIDENT": "New incident",
